Fixed text wrapping issue

--- a/gradesa/src/components/ui/sidebar.css
+++ b/gradesa/src/components/ui/sidebar.css
@@ -14,6 +14,7 @@
     align-items: left;
     justify-content: left;
     background-color: var(--bg3);
+    white-space: nowrap;
 }
   
 .sidebar-left {
@@ -33,6 +34,8 @@
 
 .dropdown {
     width: 20%;
+    font-size: var(--font-lg);
+    color: var(--secondary1);
 }
 
 .dropdown-button {
@@ -45,6 +48,8 @@
 
 }
 
+/* Note: this refers to the dropdown-menu 
+in sidenavigation.js */
 .menu {
     display: none;
     position: flex;
